# BJ-back

./: .gitignore  ENGINE_ACCURACY_AUDIT.md  ENGINE_OPTIMIZATION_BASELINE.md  MACHINE_EV_ACCURACY_AUDIT.md  MACHINE_EV_COMPARISON.md  MACHINE_EV_FEATURE_SUMMARY.md  MACHINE_EV_FINAL_REGRESSION.md  MACHINE_EV_PRE_ROUND.md  PRE_ROUND_ANALYSIS_AUDIT.md  PRE_ROUND_COUNTING_SYSTEMS.md  README.md  main.py  pyproject.toml
app/: __init__.py  main.py  pre_round_schemas.py  schemas.py
app/routes/: analysis.py  pre_round.py
benchmarks/: audit_machine_ev_accuracy.py  benchmark_analyze_hand.py  benchmark_machine_ev.py  compare_engine_accuracy.py  compare_engine_modes.py  compare_machine_ev_vs_counting_systems.py  compare_pre_round_systems.py  profile_analyze_hand.py
src/blackjack_risk_engine/: cards.py  (+11 more)
tests/: __init__.py  test_action_ev.py  test_api.py  test_cli.py  test_compare_pre_round_systems_script.py  test_counting.py  test_counting_systems.py  test_dealer.py  test_dealer_dp.py  test_decisions.py  test_deck.py  test_engine_accuracy.py  test_engine_core.py  test_engine_modes.py  test_ev.py  test_hand.py  test_machine_ev_accuracy_audit.py  test_machine_ev_api.py  test_machine_ev_benchmark.py  test_machine_ev_evaluator.py  test_machine_ev_models.py  test_machine_ev_predeal_enumerator.py  test_monte_carlo_analysis.py  test_pre_round_analysis.py  test_pre_round_analysis_api.py  test_pre_round_bankroll_policy.py  test_pre_round_edge_estimation.py  test_pre_round_engine_independence.py  test_regression_baseline.py  test_risk.py  test_rules.py  test_simulation.py  test_strategy.py
(+29 files in other folders)
