[project]
name = "blackjack-risk-engine"
version = "0.1.0"
description = "Engine de analise de decisoes em blackjack usando simulacao e valor esperado."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Daniel Luna" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
